// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserController 正常系 deleteUserHandler 1`] = `
{
  "message": "User deleted successfully",
}
`;

exports[`UserController 正常系 getUserHandler 1`] = `
{
  "email": "test1@test.com",
  "id": 1,
  "name": "Alice",
  "passwordHash": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
}
`;

exports[`UserController 正常系 getUsersHandler 1`] = `
[
  {
    "email": "test1@test.com",
    "id": 1,
    "name": "Alice",
    "passwordHash": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  },
  {
    "email": "test2@test.com",
    "id": 2,
    "name": "Bob",
    "passwordHash": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  },
]
`;

exports[`UserController 正常系 updateUserHandler 1`] = `
{
  "email": "test@test.com",
  "id": 1,
  "name": "Alice updated",
}
`;
